--- a/modules/end-user-guide/pages/creating-a-kubernetes-secret-for-a-git-credentials-store.adoc
+++ b/modules/end-user-guide/pages/creating-a-kubernetes-secret-for-a-git-credentials-store.adoc
@@ -2,12 +2,12 @@
 :keywords: user-guide, configuring, user, secrets
 :page-aliases: 
 
-[id="mounting-a-git-credential-store-into-workspace-containers_{context}"]
+[id="creating-a-kubernetes-secret-for-a-git-credentials-store_{context}"]
 = Creating a {orch-name} Secret for a Git credentials store
 
 As an alternative to the OAuth for GitHub, GitLab, or Bitbucket that is configured by the administrator of your organization's {prod-short} instance, you can apply your Git credentials store as a Secret in your user {orch-namespace}.
 
-When mounting the Secret, a Git configuration file with the path to the mounted Git credentials store is automatically configured and mounted to the {devworkspace} containers at `/etc/gitconfig`.
+When mounting the Secret, a Git configuration file with the path to the mounted Git credentials store is automatically configured and mounted to the `{devworkspace}` containers at `/etc/gitconfig`.
 
 .Prerequisites
 
@@ -63,12 +63,12 @@ data:
 ----
 +
 <1> The `controller.devfile.io/git-credential` label marks the Secret as containing Git credentials.
-<2> A custom absolute path in the {devworkspace} containers. The Secret is mounted as the `credentials` file at this path. The default path is `/`.
+<2> A custom absolute path in the `{devworkspace}` containers. The Secret is mounted as the `credentials` file at this path. The default path is `/`.
 <3> The selected content from `.git-credentials` that you encoded to Base64 in the previous step.
 +
 [TIP]
 ====
-You can create and apply multiple Git credentials Secrets in your user {orch-namespace}. All of them will be copied into one Secret that will be mounted to the {devworkspace} containers. For example, if you set the mount path to `/etc/secret`, then the one Secret with all of your Git credentials will be mounted at `/etc/secret/credentials`. You must set all Git credentials Secrets in your user {orch-namespace} to the same mount path. You can set the mount path to an arbitrary path because the mount path will be automatically set in the Git configuration file configured at `/etc/gitconfig`.
+You can create and apply multiple Git credentials Secrets in your user {orch-namespace}. All of them will be copied into one Secret that will be mounted to the `{devworkspace}` containers. For example, if you set the mount path to `/etc/secret`, then the one Secret with all of your Git credentials will be mounted at `/etc/secret/credentials`. You must set all Git credentials Secrets in your user {orch-namespace} to the same mount path. You can set the mount path to an arbitrary path because the mount path will be automatically set in the Git configuration file configured at `/etc/gitconfig`.
 ====
 
 . Use the CLI or GUI to apply the Secret to the {orch-name} cluster of your organization's {prod-short} instance.
