--- a/modules/end-user-guide/pages/authenticating-yourself-to-a-git-server-from-a-workspace.adoc
+++ b/modules/end-user-guide/pages/authenticating-yourself-to-a-git-server-from-a-workspace.adoc
@@ -9,7 +9,7 @@
 
 In a workspace, you can run Git commands that require user authentication like cloning a remote private Git repository or pushing to a remote public or private Git repository.
 
-To configure user authentication to a Git server from a workspace, {prod-short} offers you two options:
+To configure user authentication to a Git server from a workspace, {prod-short} provides two options:
 
 * Your administrator sets up an xref:administration-guide:oauth-for-github-gitlab-or-bitbucket.adoc[OAuth application on GitHub, GitLab, or Bitbucket] for your organization's {prod} instance.
 
