fix thanks to Sri,s review

--- a/modules/end-user-guide/pages/user-onboarding.adoc
+++ b/modules/end-user-guide/pages/user-onboarding.adoc
@@ -7,7 +7,7 @@
 [id="user-onboarding_{context}"]
 = User onboarding
 
-If your organization is already running a {prod-short} instance, you can get started as a new user by learning how to start a new workspace, manage your workspaces, and authenticate yourself to remote Git repositories from workspaces:
+If your organization is already running a {prod-short} instance, you can get started as a new user by learning how to start a new workspace, manage your workspaces, and authenticate yourself to a Git server from a workspace:
 
 . xref:starting-a-new-workspace-with-a-clone-of-a-git-repository.adoc[]
 . xref:optional-parameters-for-the-urls-for-starting-a-new-workspace.adoc[]
