--- a/modules/end-user-guide/pages/mounting-secrets.adoc
+++ b/modules/end-user-guide/pages/mounting-secrets.adoc
@@ -14,14 +14,12 @@ Mount {kubernetes} Secrets to the `{devworkspace}` containers in the {orch-name}
 .Prerequisites
 
 * You have GUI or CLI access to the {orch-name} cluster of your organization's {prod-short} instance.
-* You have created a new Secret or determined an existing one in your user {orch-namespace} to mount to all `{devworkspace}` containers.
 * For CLI users: The `{orch-cli}` command line tool is installed in the operating system you are using.
+* A Secret is created in your user {orch-namespace} to mount to all `{devworkspace}` containers.
 
 .Procedure
 
-. Determine an existing ConfigMap or Secret in your user {orch-namespace} to mount to all workspace containers.
-
-. Set the required labels for mounting.
+. Add the required labels to the Secret.
 +
 [TIP]
 ====
