--- a/modules/end-user-guide/pages/mounting-configmaps.adoc
+++ b/modules/end-user-guide/pages/mounting-configmaps.adoc
@@ -14,14 +14,12 @@ Mount {kubernetes} ConfigMaps to the `{devworkspace}` containers in the {orch-na
 .Prerequisites
 
 * You have GUI or CLI access to the {orch-name} cluster of your organization's {prod-short} instance.
-* You have created a new ConfigMap or determined an existing one in your user {orch-namespace} to mount to all `{devworkspace}` containers.
 * For CLI users: The `{orch-cli}` command line tool is installed in the operating system you are using.
+* A ConfigMap is created in your user {orch-namespace} to mount to all `{devworkspace}` containers.
 
 .Procedure
 
-. Determine an existing ConfigMap in your user {orch-namespace} to mount to all workspace containers.
-
-. Set the required labels for mounting.
+. Add the required labels to the ConfigMap.
 +
 [TIP]
 ====
