--- a/modules/end-user-guide/pages/authenticating-yourself-to-a-git-server-from-a-workspace.adoc
+++ b/modules/end-user-guide/pages/authenticating-yourself-to-a-git-server-from-a-workspace.adoc
@@ -13,8 +13,8 @@ To configure user authentication to a Git server from a workspace, {prod-short} 
 
 * Your administrator sets up an xref:administration-guide:oauth-for-github-gitlab-or-bitbucket.adoc[OAuth application on GitHub, GitLab, or Bitbucket] for your organization's {prod} instance.
 
-* You create your own, user xref:creating-a-kubernetes-secret-for-a-git-credentials-store.adoc[{kubernetes} Secret for a Git credentials store].
+* You create your own, user xref:using-a-git-credentials-store.adoc[{kubernetes} Secret for a Git credentials store].
 
 .Additional resources
 * xref:administration-guide:oauth-for-github-gitlab-or-bitbucket.adoc[Administration Guide: OAuth for GitHub, GitLab, or Bitbucket]
-* xref:creating-a-kubernetes-secret-for-a-git-credentials-store.adoc[User Guide: Creating a Kubernetes Secret for a Git credentials store]
+* xref:using-a-git-credentials-store.adoc[User Guide: Using a Git credentials store]
