procedures: Installing Che in a restricted environment on OpenShift

--- a/modules/administration-guide/partials/proc_using-chectl-to-install-che-on-codeready-containers.adoc
+++ b/modules/administration-guide/partials/proc_using-chectl-to-install-che-on-codeready-containers.adoc
@@ -12,6 +12,8 @@ This section describes how to install {prod-short} on CodeReady Containers using
 * The `{prod-cli}` management tool is available. See xref:using-the-chectl-management-tool.adoc[].
 * An installation of CodeReady Containers. See link:https://console.redhat.com/openshift/create/local[Installing CodeReady Containers].
 * The path to the user's CodeReady Containers pull secret is known as __<pull-secret-file>__.
+* Available memory: 12 GB or more.
+* Available disk size: 64 GB or more.
 
 .Procedure
 
@@ -27,11 +29,11 @@ $ crc delete
 $ crc setup
 ----
 
-. Start the CodeReady Containers virtual machine with at least 12 GB of RAM and specify the path to your pull secret, and take note of the password for the user `kubeadmin`, displayed at the end of the CodeReady Containers initiation:
+. Start the CodeReady Containers virtual machine with at least 12 GB of memory, 64 GB of disk, and specify the path to your pull secret, and take note of the password for the user `kubeadmin`, displayed at the end of the CodeReady Containers initiation:
 +
 [subs="+quotes"]
 ----
-$ crc start --memory 12288 --pull-secret-file __<pull-secret-file>__
+$ crc start --memory 12288 --disk-size=64 --pull-secret-file __<pull-secret-file>__
 ----
 
 . Enable access to the `oc` command line interface embedded in CodeReady Containers:
