--- a/modules/administration-guide/pages/installing-che-in-a-restricted-environment.adoc
+++ b/modules/administration-guide/pages/installing-che-in-a-restricted-environment.adoc
@@ -1,26 +1,35 @@
 :_content-type: PROCEDURE
-:navtitle: Installing {prod-short} in restricted environment
+:navtitle: Installing {prod-short} in a restricted environment
 :keywords: administration guide, installing-che-in-a-restricted-environment, installing-che-in-restricted-environment
-:page-aliases: installation-guide:installing-che-in-restricted-environment, installation-guide:installing-che-in-a-restricted-environment
+:page-aliases: installation-guide:installing-che-in-restricted-environment, installation-guide:installing-che-in-a-restricted-environment, preparing-a-restricted-environment, configuring-che-to-run-in-a-restricted-environment
 
-:parent-context-of-installing-che-in-a-restricted-environment: {context}
 
-[id="installing-{prod-id-short}-in-a-restricted-environment_{context}"]
-= Installing {prod-short} in a restricted environment
 
-:context: installing-{prod-id-short}-in-a-restricted-environment
+[id="installing-{prod-id-short}-in-a-restricted-environment-on-openshift_{context}"]
+= Installing {prod-short} in a restricted environment on OpenShift
 
-By default, {prod-short} workspaces reference various external resources, including container images available in public registries or sample projects hosted on public resources. This section describes how to deploy {prod-short} in a restricted environment where these external resources are not available. This method is also called _offline mode_ or _air-gap scenario_.
+On an OpenShift cluster operating in a restricted network, public resources are not available.
+
+Deploying {prod-short} and running workspaces requires public resources:
+
+* Operator catalog
+* Container images
+* Sample projects
+
+Replace these resources by their copy in a registry accessible by the OpenShift cluster.
+
 
 .Prerequisites
 
-* You are logged in to the cluster using the developer account.
+include::partial$snip_preparing-images-for-a-restricted-environment.adoc[]
 
-* Dynamic provisioning or pre-defined PVs configured before the deployment.
+. Install {prod-short} with the configuration set in the `che-operator-cr-patch.yaml` during previous step:
++
+[subs="+attributes,+quotes"]
+----
+$ {prod-cli} server:deploy --platform=openshift \
+  --che-operator-cr-patch-yaml=che-operator-cr-patch.yaml
+----
 
-* Block-based storage volume or NFS share available outside of the cluster to serve dynamic storage provisioning or PVs. Block-based storage is recommended for optimal performance. 
+include::partial$snip_installing-che-in-a-restricted-environment-additional-resources.adoc[]
 
-* xref:preparing-a-restricted-environment.adoc[]
-* xref:configuring-che-to-run-in-a-restricted-environment.adoc[]
-
-:context: {parent-context-of-installing-che-in-a-restricted-environment}
