Apply suggestions from code review
Co-authored-by: Brian Burt <86380613+bburt-rh@users.noreply.github.com>

--- a/modules/administration-guide/pages/installing-che-in-a-restricted-environment.adoc
+++ b/modules/administration-guide/pages/installing-che-in-a-restricted-environment.adoc
@@ -10,20 +10,20 @@
 
 On an OpenShift cluster operating in a restricted network, public resources are not available.
 
-Deploying {prod-short} and running workspaces requires public resources:
+However, deploying {prod-short} and running workspaces requires the following public resources:
 
 * Operator catalog
 * Container images
 * Sample projects
 
-Replace these resources by their copy in a registry accessible by the OpenShift cluster.
+To make these resources available, you can replace them with their copy in a registry accessible by the OpenShift cluster.
 
 
 .Prerequisites
 
 include::partial$snip_preparing-images-for-a-restricted-environment.adoc[]
 
-. Install {prod-short} with the configuration set in the `che-operator-cr-patch.yaml` during previous step:
+. Install {prod-short} with the configuration set in the `che-operator-cr-patch.yaml` during the previous step:
 +
 [subs="+attributes,+quotes"]
 ----
