--- a/modules/administration-guide/partials/proc_using-chectl-to-install-che-on-codeready-containers.adoc
+++ b/modules/administration-guide/partials/proc_using-chectl-to-install-che-on-codeready-containers.adoc
@@ -29,7 +29,7 @@ $ crc delete
 $ crc setup
 ----
 
-. Start the CodeReady Containers virtual machine with at least 12 GB of memory, 64 GB of disk, and specify the path to your pull secret, and take note of the password for the user `kubeadmin`, displayed at the end of the CodeReady Containers initiation:
+. Start the CodeReady Containers virtual machine with at least 12 GB of memory and 64 GB of disk space. Also, specify the path to your pull secret and take note of the password for the `kubeadmin` user displayed at the end of the CodeReady Containers initiation:
 +
 [subs="+quotes"]
 ----
