docs: Authentication for Git repositories (#2283)
Co-authored-by: Rolfe Dlugy-Hegwer <rolfedh@users.noreply.github.com>
Co-authored-by: Robert Krátký <rkratky@redhat.com>
Co-authored-by: David Kwon <dakwon@redhat.com>
Co-authored-by: Fabrice Flore-Thébault <ffloreth@redhat.com>

--- a/modules/end-user-guide/nav.adoc
+++ b/modules/end-user-guide/nav.adoc
@@ -8,6 +8,7 @@
 ** xref:starting-a-new-workspace-with-a-clone-of-a-git-repository.adoc[]
 ** xref:optional-parameters-for-the-urls-for-starting-a-new-workspace.adoc[]
 ** xref:basic-actions-you-can-perform-on-a-workspace.adoc[]
+** xref:authenticating-yourself-to-a-git-server-from-a-workspace.adoc[]
 * xref:selecting-an-ide.adoc[]
 * xref:customizing-workspaces-components.adoc[]
 * xref:using-credentials-and-configurations-in-workspaces.adoc[]
@@ -15,7 +16,7 @@
 ** xref:creating-image-pull-secrets.adoc[]
 ** xref:mounting-secrets.adoc[]
 ** xref:mounting-configmaps.adoc[]
-* xref:requesting-persistent-storage-for-workspaces.adoc[] 
+* xref:requesting-persistent-storage-for-workspaces.adoc[]
 * xref:integrating-with-kubernetes.adoc[]
 ** xref:automatic-token-injection.adoc[]
 ** xref:navigating-che-from-openshift-developer-perspective.adoc[]
