--- a/modules/administration-guide/pages/upgrading-che-using-the-cli-management-tool-in-restricted-environment.adoc
+++ b/modules/administration-guide/pages/upgrading-che-using-the-cli-management-tool-in-restricted-environment.adoc
@@ -12,13 +12,13 @@ This section describes how to upgrade {prod} using the CLI management tool in re
 .Prerequisites
 
 
-* An instance running {prod-short} {prod-prev-ver}, installed on the same instance of OpenShift, with the `{prod-cli} --installer operator` method, in the `_<{prod-namespace}>_` project. See xref:installing-che-in-a-restricted-environment.adoc[].
+* An instance running {prod-prev-short} {prod-prev-ver}, installed on the same instance of OpenShift, with the `{prod-cli} --installer operator` method, in the `_<{prod-namespace}>_` project. See xref:installing-che-in-a-restricted-environment.adoc[].
 
 include::partial$snip_preparing-images-for-a-restricted-environment.adoc[]
 
-. In all running workspaces in the {prod-short} {prod-prev-ver} instance, save and push changes back to the Git repositories.
+. In all running workspaces in the {prod-prev-short} {prod-prev-ver} instance, save and push changes back to the Git repositories.
 
-. Stop all workspaces in the {prod-short} {prod-prev-ver} instance.
+. Stop all workspaces in the {prod-prev-short} {prod-prev-ver} instance.
 
 . Run the following command:
 +
