--- a/modules/administration-guide/pages/upgrading-che-using-the-cli-management-tool.adoc
+++ b/modules/administration-guide/pages/upgrading-che-using-the-cli-management-tool.adoc
@@ -12,16 +12,16 @@ This section describes how to upgrade from the previous minor version using the 
 
 * An administrative account on {platforms-name}.
 
-* A running instance of a previous minor version of {prod}, installed using the CLI management tool on the same instance of {platforms-name}, in the `__<{prod-namespace}>__` project.
+* A running instance of a previous minor version of {prod-prev-short}, installed using the CLI management tool on the same instance of {platforms-name}, in the `__<{prod-namespace}>__` project.
 
 * `{prod-cli}` is available and updated. See xref:using-the-chectl-management-tool.adoc[].
 
 
 .Procedure
 
-. Save and push changes back to the Git repositories for all running {prod-short} {prod-prev-ver} workspaces.
+. Save and push changes back to the Git repositories for all running {prod-prev-short} {prod-prev-ver} workspaces.
 
-. Shut down all workspaces in the {prod-short} {prod-prev-ver} instance.
+. Shut down all workspaces in the {prod-prev-short} {prod-prev-ver} instance.
 
 . Upgrade {prod-short}:
 +
