--- a/modules/administration-guide/pages/upgrading-che.adoc
+++ b/modules/administration-guide/pages/upgrading-che.adoc
@@ -10,14 +10,6 @@
 
 :context: upgrading-{prod-id-short}
 
-This chapter describes how to upgrade a {prod-short} instance from {prod-short} {prod-prev-ver} to {prod-short} {prod-ver}.
-
-The method used to install the {prod-short} instance determines the method to proceed with for the upgrade:
-
-* xref:upgrading-che-using-operatorhub.adoc[]
-
-* xref:upgrading-che-using-the-cli-management-tool.adoc[]
-
-* xref:upgrading-che-using-the-cli-management-tool-in-restricted-environment.adoc[]
+This chapter describes how to upgrade from {prod-prev-short} {prod-prev-ver} to {prod-short} {prod-ver}.
 
 :context: {parent-context-of-upgrading-che}
