docs: document only CLI flows
fixes https://issues.redhat.com/browse/RHDEVDOCS-4044

--- a/modules/administration-guide/examples/proc_che-upgrading-the-chectl-management-tool.adoc
+++ b/modules/administration-guide/examples/proc_che-upgrading-the-chectl-management-tool.adoc
@@ -5,11 +5,13 @@
 [id="upgrading-the-{prod-cli}-management-tool_{context}"]
 = Upgrading the {prod-cli} management tool
 
+
+You can use the `{prod-cli}` command-line management tool to update the {prod-short} server.
 This section describes how to upgrade the `{prod-cli}` management tool.
 
 .Prerequisites
 
-*  The `{prod-cli}` tool is available. See: xref:using-the-chectl-management-tool.adoc[]
+*  The `{prod-cli}` tool is available. See: xref:installing-the-chectl-management-tool.adoc[]
 
 .Procedure
 
@@ -36,3 +38,7 @@ To move to a different channel, invoke the update with the name of the channel a
 # {prod-cli} update [next|stable]
 ----
 ====
+
+.Additional resources
+
+* {link-prod-cli-documentation}
