--- a/modules/administration-guide/pages/creating-a-telemetry-plugin.adoc
+++ b/modules/administration-guide/pages/creating-a-telemetry-plugin.adoc
@@ -414,10 +414,10 @@ spec:
 <1> The editorId to set default plug-ins for.
 <2> List of URLs to devfile v2 plug-ins.
 
-This can be accomplished by running `oc edit checluster -n {prod-namespace}` and typing in the change at the terminal, or by editing the CR in the OpenShift console (*Installed Operators -> {prod} -> {prod} Cluster -> {prod-checluster} -> YAML*).
 
-For more information about the Che Cluster custom resource, see
-xref:understanding-the-checluster-custom-resource.adoc[].
+.Additional resources
+
+* xref:understanding-the-checluster-custom-resource.adoc[].
 
 .Verification steps
 
