Apply suggestions from code review
Co-authored-by: Rolfe Dlugy-Hegwer <rolfedh@users.noreply.github.com>

--- a/modules/administration-guide/pages/configuring-routes.adoc
+++ b/modules/administration-guide/pages/configuring-routes.adoc
@@ -6,7 +6,7 @@
 [id="configuring-routes_{context}"]
 = Configuring OpenShift Route to work with Router Sharding
 
-This procedure describes how to configure labels, annotations, and domains for OpenShift Route to work with link:https://docs.openshift.com/container-platform/4.7/networking/ingress-operator.html#nw-ingress-sharding_configuring-ingress[Router Sharding].
+You can configure labels, annotations, and domains for OpenShift Route to work with link:https://docs.openshift.com/container-platform/4.7/networking/ingress-operator.html#nw-ingress-sharding_configuring-ingress[Router Sharding].
 
 .Prerequisites
 
@@ -32,8 +32,9 @@ spec:
       CHE_INFRA_OPENSHIFT_ROUTE_HOST_DOMAIN__SUFFIX: <domain> <2>
 ----
 <1> comma separated list of labels that are used by the target ingress controller to filter the set of Routes to service
-<2> DNS name serviced by the target ingress controller
-<3> unstructured key value map stored with a resource
+<1> A comma-separated list of labels that the target ingress controller uses to filter the set of Routes to service.
+<2> The DNS name serviced by the target ingress controller.
+<3> An unstructured key value map stored with a resource.```
 
 
 .Additional resources
