--- a/modules/administration-guide/pages/installing-che-on-openshift.adoc
+++ b/modules/administration-guide/pages/installing-che-on-openshift.adoc
@@ -6,7 +6,7 @@
 [id="installing-{prod-id-short}-on-openshift_{context}"]
 = Installing {prod-short} on OpenShift
 
-This section describes how to install {prod-short} on OpenShift.
+You can install {prod-short} on OpenShift.
 
 .Prerequisites
 
