--- a/modules/administration-guide/partials/assembly_uninstalling-the-che-instance-and-the-che-operator.adoc
+++ b/modules/administration-guide/partials/assembly_uninstalling-the-che-instance-and-the-che-operator.adoc
@@ -19,7 +19,7 @@ After uninstalling the {devworkspace} Operator, uninstall the {prod-short} insta
 $ oc project __<{prod-id-short}_namespace>__
 ----
 
-. Obtain the `CheCluster` `NAME`:
+. Get the name of the `CheCluster`:
 
 +
 [subs="+attributes,+quotes"]
@@ -34,7 +34,7 @@ $ oc get checluster
 $ oc delete checluster __<checluster_name>__
 ----
 
-. Obtain the `NAME` of the {prod-short} cluster service version (CSV):
+. Get the name of the {prod-short} cluster service version (CSV):
 +
 [subs="+attributes,+quotes"]
 ----
