--- a/modules/administration-guide/pages/installing-che-on-codeready-containers.adoc
+++ b/modules/administration-guide/pages/installing-che-on-codeready-containers.adoc
@@ -10,20 +10,21 @@
 
 :context: installing-{prod-id-short}-on-codeready-containers
 
-This chapter describes the creation of a single-node OpenShift cluster for deploying a {prod-short} instance using CodeReady Containers.
+You can create a single-node OpenShift cluster for deploying a {prod-short} instance using CodeReady Containers.
 
 .Prerequisites
 
 * The `{prod-cli}` management tool is available. See xref:installing-the-chectl-management-tool.adoc[].
-* An installation of CodeReady Containers. See link:https://console.redhat.com/openshift/create/local[Installing CodeReady Containers].
-* The path to the user's CodeReady Containers pull secret is known as __<pull-secret-file>__.
-* Available memory: 12 GB or more.
-* Available disk size: 64 GB or more.
+* A running instance of CodeReady Containers. See link:https://console.redhat.com/openshift/create/local[Installing CodeReady Containers].```
+* The filepath of the user's CodeReady Containers pull secret.
+* Available memory is 12 GB or more.
+* Available disk size is 64 GB or more.
 
 .Procedure
 
-. Remove any previous cluster:
+. Remove the previous cluster:
 +
+[source,terminal] 
 ----
 $ crc delete
 ----
@@ -75,4 +76,3 @@ $ {prod-cli} dashboard:open
 .Additional resources
 
 * link:https://access.redhat.com/documentation/en-us/red_hat_codeready_containers/[Product documentation for Red Hat CodeReady Containers].
-* link:https://github.com/code-ready/crc[CodeReady Containers on GitHub].
